[BUGFIX#19857751] unfound list now returns 404
AND list now validates uniqueness of name within an account

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,4 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  placeholder: "at least one translation is needed" # TODO remove this when other keys are added
