change error message key

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,4 +4,6 @@
 en:
   placeholder: "at least one translation is needed" # TODO remove this when other keys are added
   errors:
-    could_have_duplicates: "Could have duplicates"
+    messages:
+      invalid_format: "Invalid format"
+      could_have_duplicates: "Could have duplicates"
