--- a/README.rdoc
+++ b/README.rdoc
@@ -4,10 +4,14 @@ Mongo DB is needed for this app. To install download from here: http://www.mongo
 
 = Development documentation
 
-  Run `yard`
-  then open doc/index.html
+Run
+    yard
+
+then open doc/index.html
 
 = WS API Documentation
 
-  Run `bundle exec yardoc --plugin rest`
-  then open doc/index.html
+Run
+    bundle exec yardoc --plugin rest
+
+then open doc/index.html
