[#33889275] validate existence and similarity and choose father

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -3,3 +3,7 @@ es:
     messages:
       invalid_format: "Formato invalido"
       could_have_duplicates: "Puede tener duplicados"
+    merge:
+      existence_of_contacts: "Al menos uno de los contactos no existe"
+      similarity_of_contacts: "Los contactos deben ser similares"
+
