--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,3 +7,6 @@ en:
     messages:
       invalid_format: "Invalid format"
       could_have_duplicates: "Could have duplicates"
+    merge:
+      existence_of_contacts: "At least one of the contacts doesn't exist"
+      similarity_of_contacts: "Contacts must be similar"
