--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -26,4 +26,6 @@ es:
       existence_of_contacts: "Al menos uno de los contactos no existe"
       similarity_of_contacts: "Los contactos deben ser similares"
       uniqueness: "Los contactos ya estan siendo fundidos"
+    mailchimp:
+      list_not_found: "No se encontró la lista"
 
