--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -15,3 +15,6 @@ pt-BR:
       female: mulher
     coefficient:
       coefficient: Coeficiente
+  errors:
+    mailchimp:
+      list_not_found: "Nenhuma lista encontrada"
