--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,6 +2,7 @@ pt-BR:
   local_teacher:
     new_teacher: O novo instrutor é %{teacher_username}
   mailchimp:
+    teacher: Instrutor
     phone:
       phone: telephone
     status:
