[#136301477] add padma_tags to update_fields_in_mailchimp

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,6 +2,7 @@ es:
   local_teacher:
     new_teacher: Pasa a ser alumno de %{teacher_username}
   mailchimp:
+    padma_tags: Tags en PADMA
     teacher: Instructor
     phone:
       phone: telefono
