--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -3,6 +3,7 @@ pt-BR:
     new_teacher: O novo instrutor é %{teacher_username}
   mailchimp:
     teacher: Instrutor
+    padma_tags: Tags em PADMA
     phone:
       phone: telephone
     status:
